[gd_scene load_steps=8 format=3 uid="uid://b2cgxcqtnwipb"]

[ext_resource type="Script" path="res://Scenes/Attacks/light_orb.gd" id="1_bochs"]

[sub_resource type="Gradient" id="Gradient_32ma5"]
offsets = PackedFloat32Array(0, 0.727273)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cyer2"]
gradient = SubResource("Gradient_32ma5")
width = 96
height = 96
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_x13nc"]
radius = 48.0

[sub_resource type="Animation" id="Animation_uqw6c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fe3bc"]
resource_name = "pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_one5f"]
_data = {
"RESET": SubResource("Animation_uqw6c"),
"pulse": SubResource("Animation_fe3bc")
}

[node name="LightOrb" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_bochs")
damage = 5

[node name="Light" type="PointLight2D" parent="."]
color = Color(1, 1, 0, 1)
energy = 4.0
texture = SubResource("GradientTexture2D_cyer2")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x13nc")

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "pulse"
libraries = {
"": SubResource("AnimationLibrary_one5f")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
